--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </header>
       </div>
 
-      <section class="right-content">
+      <div class="right-content">
         <div class="right-content-container">
           <div class="right-content-content">
             <div class="header-para">
@@ -102,7 +102,7 @@
           <img src="/images/icon-angle-left.svg" alt="Arrow Left Icon" class="left-arrow-desktop">
           <img src="/images/icon-angle-right.svg" alt="Arrow Right Icon" class="right-arrow-desktop">
         </div>
-      </section>
+      </div>
       
     </section>
 
